--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,98 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <div class="heading ion-text-center">
+    <ion-header style="padding-bottom: 6px;">
+      <ion-item>
+        <ion-icon slot="start" name="arrow-back-outline"></ion-icon>
+        <h3>Welcome, Nyembo</h3>
+          <ion-icon slot="end" name="person-circle-outline"></ion-icon>
+        </ion-item>
+    </ion-header>
+    <br />
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <ion-label color="primary">Unit 7: Loft</ion-label>
+    <br />
+    <ion-label color="primary">Lease Expires: 22 Days</ion-label>
   </div>
+
+    <ion-card color="primary">
+        <!-- <ion-card-header> -->
+          <ion-item>
+          <ion-label>Wallet Bal: </ion-label><ion-label color="primary">R200</ion-label>
+            <ion-button slot="end" color="primary">TOP UP NOW</ion-button>
+          </ion-item>
+        <!-- </ion-card-header> -->
+    </ion-card>
+
+    <br />
+
+  <div class="ion-text-center">
+    <ion-item class="ion-no-padding" lines="none">
+        <ion-icon class="homeIcons" slot="start" name="fast-food-outline"></ion-icon>
+      <ion-label>Buy Food Voucher</ion-label>
+      <ion-buttons slot="end">
+          <ion-button color="primary" fill="clear">
+              <ion-icon slot="end" name="arrow-forward-outline"></ion-icon>
+          </ion-button>
+      </ion-buttons>
+    </ion-item>
+
+    <ion-item class="ion-no-padding" lines="none">
+        <ion-icon class="homeIcons"  slot="start" name="card-outline"></ion-icon>
+      <ion-label>Buy Airtime</ion-label>
+      <ion-buttons slot="end">
+          <ion-button color="primary" fill="clear">
+              <ion-icon slot="end" name="arrow-forward-outline"></ion-icon>
+          </ion-button>
+      </ion-buttons>
+    </ion-item>
+
+    <ion-item class="ion-no-padding" lines="none">
+      <ion-icon class="homeIcons"  slot="start" name="flash-outline"></ion-icon>
+    <ion-label>Buy Power:</ion-label><ion-label color="primary">6 days left</ion-label>
+    <ion-buttons slot="end">
+        <ion-button color="primary" fill="clear">
+            <ion-icon slot="end" name="arrow-forward-outline"></ion-icon>
+        </ion-button>
+    </ion-buttons>
+  </ion-item>
+
+    <ion-item class="ion-no-padding" lines="none">
+      <ion-icon class="homeIcons"  slot="start" name="pulse-outline"></ion-icon>
+    <ion-label>Book Clinic</ion-label>
+    <ion-buttons slot="end">
+        <ion-button color="primary" fill="clear">
+            <ion-icon slot="end" name="arrow-forward-outline"></ion-icon>
+        </ion-button>
+    </ion-buttons>
+  </ion-item>
+
+  <ion-item class="ion-no-padding" lines="none">
+    <ion-icon class="homeIcons"  slot="start" name="newspaper-outline"></ion-icon>
+  <ion-label>Transaction History</ion-label>
+  <ion-buttons slot="end">
+      <ion-button color="primary" fill="clear">
+          <ion-icon slot="end" name="arrow-forward-outline"></ion-icon>
+      </ion-button>
+  </ion-buttons>
+  </ion-item>
+
+  <ion-item class="ion-no-padding" lines="none">
+    <ion-icon class="homeIcons"  slot="start" name="alert-circle-outline"></ion-icon>
+  <ion-label>Report a problem</ion-label>
+  <ion-buttons slot="end">
+      <ion-button color="primary" fill="clear">
+          <ion-icon slot="end" name="aarrow-forward-outline"></ion-icon>
+      </ion-button>
+  </ion-buttons>
+  </ion-item>
+
+
+  </div>
+
+  <br />
+  <footer>
+    <ion-img style="width: 200px; height: 150px;" src="assets/ho-meLogoWhite.png" alt="Logo"></ion-img>
+  </footer>
 </ion-content>
