--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,15 @@
-#container {
-  text-align: center;
 
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+ion-img {
+  display: block;
+  margin: 0 auto;
+  float: fixed;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+.heading {
+  margin-left: 12px;
+  margin-bottom: 10px;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+.homeIcons {
+  padding-left: 30px;
 }
