changes to background

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -83,7 +83,7 @@
   <ion-label>Report a problem</ion-label>
   <ion-buttons slot="end">
       <ion-button color="primary" fill="clear">
-          <ion-icon slot="end" name="aarrow-forward-outline"></ion-icon>
+          <ion-icon slot="end" name="arrow-forward-outline"></ion-icon>
       </ion-button>
   </ion-buttons>
   </ion-item>
