--- a/src/app/register/register.page.scss
+++ b/src/app/register/register.page.scss
@@ -2,9 +2,9 @@
 //   --background: rgb(65, 65, 65);
 // }
 
-ion-item {
-  --background: rgb(82, 82, 82);
-}
+// ion-item {
+//   --background: rgb(82, 82, 82);
+// }
 
 ion-input {
   color: white;
