--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -13,3 +13,12 @@ ion-img {
 .homeIcons {
   padding-left: 30px;
 }
+
+.whiteText {
+  color: white;
+}
+
+.rebookBtn {
+  color: White;
+  margin: 20px;
+}
