--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -23,9 +23,9 @@
 
       <br />
 
-      <ion-button color="dark" (click)="login()">Login</ion-button>
+      <ion-button size="medium" color="dark" (click)="login()">Login</ion-button>
       <br />
-      <ion-button size="small" (click)="register()">Register</ion-button>
+      <ion-button size="medium" (click)="register()">Register</ion-button>
   </div>
 </ion-content>
 
