--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -2,32 +2,6 @@
   <div class="ion-text-center container">
     <ion-img style="width: 200px; height: 150px;" src="assets/ho-meLogoWhite.png" alt="Logo"></ion-img>
 
-    <h6 class="label">Personal Information</h6>
-
-    <ion-item>
-      <ion-label color="primary">Name</ion-label>
-      <ion-input></ion-input>
-    </ion-item>
-
-    <ion-item>
-      <ion-label color="primary">Surname</ion-label>
-      <ion-input></ion-input>
-    </ion-item>
-
-    <ion-item>
-      <ion-label color="primary">Email</ion-label>
-      <ion-input type="email"></ion-input>
-    </ion-item>
-
-    <ion-item>
-      <ion-label color="primary">Phone Number</ion-label>
-      <ion-input type="number"></ion-input>
-    </ion-item>
-
-    <br />
-
-    <h6 class="label">Login Details</h6>
-
     <ion-item>
       <ion-label color="primary">Username</ion-label>
       <ion-input></ion-input>
@@ -44,7 +18,9 @@
     </ion-item>
 
     <br />
-    <ion-button size="small" (click)="register()">Register</ion-button>
+    <ion-button size="medium" (click)="register()">
+      <span>Register</span>
+    </ion-button>
     </div>
 </ion-content>
 
