--- a/src/app/landing-page/landing-page.page.scss
+++ b/src/app/landing-page/landing-page.page.scss
@@ -40,8 +40,15 @@ ion-slides{
   font-size: 16px;
 }
 
+.perDay {
+  margin-top: -22px;
+  margin-bottom: 5px;
+  color: rgb(182, 182, 182);
+  font-size: 16px;
+}
+
 .ratingAndReviews {
-  margin-top: -2px;
+  margin-top: 15px;
   color: white;
 }
 
